tests/cheri-ci/expected/0293-compound-assignment.error.c.expected
cheri-ci/0293-compound-assignment.error.c:5:5: error: constraint violation: invalid operands to binary expression ('signed int' and 'struct s')
  x *= a;
  ~ ^  ~ 
ยง6.5.16.2#2: 
2   For the other operators, the left operand shall have atomic, qualified, or unqualified
    arithmetic type, and (considering the type the left operand would have after lvalue
    conversion) each operand shall have arithmetic type consistent with those allowed by the
    corresponding binary operator.

ยง6.5.5#2, sentence 1: 
2   Each of the operands shall have arithmetic type. The operands of the % operator shall
    have integer type.
